--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
   padding: 2rem;
   text-align: center;
 }
+@media (max-width: 768px) {
+  #root {
+    padding: 0rem;
+  }
+}
 
 .logo {
   height: 6em;
